cmake_minimum_required(VERSION 3.10.0)
project(MultiTargetProject)
set(CMAKE_CXX_STANDARD 17)

add_executable(Lab2-programming 1.cpp)
add_executable(Lab2-programming1 2.cpp)
add_executable(Lab2-programming2 2.1.cpp)
add_executable(Lab2-programming3 3.cpp)
add_executable(Lab2-programming4 3.1.cpp)
add_executable(Lab2-programming5 4.cpp)
add_executable(Lab2-programming6 5.cpp)



